--- a/CheckPoint II - Spider-Man Esboço/index.html
+++ b/CheckPoint II - Spider-Man Esboço/index.html
@@ -1,118 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Spider-Man_CheckPoint II</title>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AndreCastro_SP-Front_End_I_Check_Point_OK</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/img/Background__menu.jpg">
-    <link rel="icon" href="/img/logo__sp.jpg" />
-</head>
-
-<body>
+  <body>
     <header>
-        <nav>
-            <img class="logo__top" id="logo__sp" src="../img/logo__sp.jpg">
-            <ol class="menu__top">
-                <li class="btn"><a href="#logo__sp">
-                        Home</a></li>
-                <li class="btn"> <a href="#why__sp">
-                        Curiosidades</a></li>
+      <img class="logo" src="/img/logo__spider_man.jpg" />
 
-                <li class="btn"><a href="#video__sp">
-                        Vídeo </a></li>
-
-                <ol>
-                    </div>
-
-        </nav>
+      <nav class="menu__nav" id="home__menu">
+        <ol>
+          <li><a href="#home__menu" target="_blank">HOME</a></li>
+          <li><a href="#spider__cards">ITENS</a></li>
+          <li><a href="#">LOGIN</a></li>
+          <li><a href="#about__us">SOBRE NÓS</a></li>
+        </ol>
+      </nav>
+      <img class="decoration__menu" src="/img/background__menu.jpg" />
     </header>
+    <div class="banner__spider_man"></div>
 
-    <main>
-        <div class="banner__bridge">
-            <div class="background__text">
-                <h1>Conheça SP:</h1>
-                <h2> Uma potência em história, cultura, gastronomia, e turismo.</h2>
-            </div>
+    <section class="cards__spider" id="spider__cards">
+      <h3>Você conhece a ordem cronológica dos filmes do cabeça de teia?</h3>
+
+      <div class="container___films">
+        <div class="cardfilm__1 slide01">
+          <div class="container__backgroundfilm1"></div>
+          <div class="container__text">
+            <h4>Filme I</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
+              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
+              veniam fugiat maiores cumque est iure provident!
+            </p>
+          </div>
+          <div class="button__card">
+            <button><a href="#"> LER MAIS</a></button>
+          </div>
         </div>
 
-
-        <section class="cards" id="why__sp">
-
-            <h3> <span class="why">>>></span> Por que vir para <span>São Paulo?</span></h3>
-
-            <div class="container___curiosity">
-                <div class="cardturism__1">
-                    <div class="container__backgroundtop1"></div>
-                    <div class="container__text">
-                        <h4> Museu do Ipiranga</h4>
-                        <p>O Museu Paulista da Universidade de São Paulo foi inaugurado em 7 de setembro de 1895 mais ou
-                            menos onde teria ocorrido o grito de Dom Pedro. I Inicialmente, a coleção era composta
-                            somente por artigos voltados à história natural e pertenciam ao Coronel Joaquim Sertório.
-                            Foi só depois do Centenário da Independência, em 1922, que a exposição mudou de caráter e
-                            passou destacar os eventos mais relevantes da história de São Paulo e do Brasil.</p>
-                    </div>
-                </div>
-
-                <div class="cardturism__2">
-                    <div class="container__backgroundtop2"></div>
-                    <div class="container__text">
-                        <h4> Gastronomia</h4>
-                        <p>Conhecer as comidas típicas de São Paulo é quase como dar a volta ao mundo sem sair do lugar,
-                            apenas explorando as possibilidades do paladar.
-                            Afinal, o estado dos Bandeirantes recebeu influências de diversas partes do Brasil e até
-                            mesmo do exterior, trazidas pelos grandes grupos de imigrantes que se estabeleceram na
-                            região, sem contar a incrível variedade de restaurantes das mais diversas nacionalidades.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="cardturism__3">
-                    <div class="container__backgroundtop3"></div>
-                    <div class="container__text">
-                        <h4> Av. Paulista</h4>
-                        <p>A Avenida Paulista é muito mais do que uma simples avenida, ela traz em si um resumo da
-                            cidade de São Paulo. A Paulista é viva, pulsante e está sempre em transformação. Andar pela
-                            Avenida Paulista é uma experiência sem fim, sempre há algo de novo a se experimentar!</p>
-                    </div>
-                </div>
+        <div class="cardfilm__2 slide02">
+          <div class="container__backgroundfilm2"></div>
+          <div class="container__text">
+            <div class="container__text">
+              <h4>Filme II</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Necessitatibus porro nesciunt saepe, temporibus odio distinctio
+                voluptatum ducimus esse labore, voluptatem quam aspernatur
+                numquam veniam fugiat maiores cumque est iure provident!
+              </p>
             </div>
-
-        </section>
-
-        <h3> Uma pequena amostra cultural de São Paulo com Estevam em seu desafio Brasil60!</h3>
-
-        <div id="video__sp" class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/9cKDcL-XX-I"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+          </div>
+          <div class="button__card">
+            <button><a href="#"> LER MAIS</a></button>
+          </div>
         </div>
-
-    </main>
-
-    <footer>
-
-        <div class="footer__rodape">
-            <div class='github'>
-                <a href="https://github.com/AndreCastro06" target="_blank">
-                    <img src="/img/Github__logo.png">
-                </a>
-            </div>
-            <div class="linkedin">
-                <a href="https://www.linkedin.com/in/andr%C3%A9-castro-45932011a/" target="_blank">
-                    <img src="/img/Linkedin__logo.png">
-                </a>
-            </div>
-
-            <div class="dhstudent">
-                <a href="https://www.digitalhouse.com/br" target="_blank"><img src="/img/Digitalhouse__logo.png"></a>
-            </div>
+        <div class="cardfilm__3 slide03">
+          <div class="container__backgroundfilm3"></div>
+          <div class="container__text">
+            <h4>Filme III</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
+              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
+              veniam fugiat maiores cumque est iure provident!
+            </p>
+          </div>
+          <div class="button__card">
+            <button><a href="#"> LER MAIS</a></button>
+          </div>
         </div>
-    </footer>
-
-</body>
-
+        <div class="cardfilm__4 slide04">
+          <div class="container__backgroundfilm4"></div>
+          <div class="container__text">
+            <h4>Filme IV</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
+              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
+              veniam fugiat maiores cumque est iure provident!
+            </p>
+          </div>
+          <div class="button__card">
+            <button><a href="#"> LER MAIS</a></button>
+          </div>
+        </div>
+        <div class="cardfilm__5 slide05">
+          <div class="container__backgroundfilm5"></div>
+          <div class="container__text">
+            <h4>Filme V</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
+              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
+              veniam fugiat maiores cumque est iure provident!
+            </p>
+          </div>
+          <div class="button__card">
+            <button><a href="#"> LER MAIS</a></button>
+          </div>
+        </div>
+        <div class="cardfilm__6 slide06">
+          <div class="container__backgroundfilm6"></div>
+          <div class="container__text">
+            <h4>Filme VI</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
+              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
+              veniam fugiat maiores cumque est iure provident!
+            </p>
+          </div>
+          <div class="button__card">
+            <button><a href="#"> LER MAIS</a></button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer id="about__us">
+        <div class="dev__group">
+          <div class="student__01">
+            <p class="name__student">André Castro</p>
+            <p>Responsável pelo desenvolvimento de</p>
+            <div class="links">
+              <a href="https://github.com/AndreCastro06" target="_blank"
+                ><img src="/img/Github__logo.png"
+              /></a>
+              <a
+                href="https://www.linkedin.com/in/andr%C3%A9-castro-45932011a/"
+                target="_blank"
+                ><img src="/img/Linkedin__logo.png"
+              /></a>
+            </div>
+          </div>
+          <div class="student__02">
+            <p class="name__student">Felipe Estevão</p>
+            <p>Responsável pelo desenvolvimento de</p>
+            <div class="links">
+              <a href="" target="_blank"><img src="/img/Github__logo.png" /></a>
+              <a href="" target="_blank"><img src="/img/Linkedin__logo.png" /></a>
+            </div>
+          </div>
+          <div class="student__03">
+            <p class="name__student">Gustavo Lourenço</p>
+            <p>Responsável pelo desenvolvimento de</p>
+            <div class="links">
+              <a href="" target="_blank"><img src="/img/Github__logo.png" /></a>
+              <a href="" target="_blank"><img src="/img/Linkedin__logo.png" /></a>
+            </div>
+          </div>
+        </div>
+        <div class="data__dev"><p>CHECKPOINT II DESENVOLVIDO JUNHO - MMXXII</p></div>
+      </footer>
+  </body>
 </html>
