--- a/CheckPoint II - Spider-Man Esboço/index.html
+++ b/CheckPoint II - Spider-Man Esboço/index.html
@@ -20,7 +20,7 @@
           <li><a href="#about__us">SOBRE NÓS</a></li>
         </ol>
       </nav>
-      <img class="decoration__menu" src="/img/background__menu.jpg" />
+      <img class="decoration__menu" src="/img/background__menu_details.png" />
     </header>
     <div class="banner__spider_man"></div>
 
