--- a/CheckPoint II - Spider-Man Esboço/index.html
+++ b/CheckPoint II - Spider-Man Esboço/index.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <img class="logo" src="/img/logo__spider_man.jpg" />
+      <img class="logo" id="home__menu" src="/img/logo__spider_man.jpg" />
 
-      <nav class="menu__nav" id="home__menu">
+      <nav class="menu__nav" >
         <ol>
           <li><a href="#home__menu" target="_blank">HOME</a></li>
           <li><a href="#spider__cards">ITENS</a></li>
@@ -156,7 +156,8 @@
             </div>
           </div>
         </div>
-        <div class="data__dev"><p>CHECKPOINT II DESENVOLVIDO JUNHO - MMXXII</p></div>
+        <div class="data__dev"><p>CHECKPOINT II DESENVOLVIDO JUNHO - MMXXII</p>
+        <a href="#home__menu"><img class="head__spider" src="/img/footer__headspider-remove.png"></a></div>
       </footer>
   </body>
 </html>
