--- a/CheckPoint II - Spider-Man Esboço/index.html
+++ b/CheckPoint II - Spider-Man Esboço/index.html
@@ -12,7 +12,7 @@
     <header>
       <img class="logo" id="home__menu" src="/img/logo__spider_man.jpg" />
 
-      <nav class="menu__nav" >
+      <nav class="menu__nav">
         <ol>
           <li><a href="#home__menu" target="_blank">HOME</a></li>
           <li><a href="#spider__cards">ITENS</a></li>
@@ -31,12 +31,30 @@
         <div class="cardfilm__1 slide01">
           <div class="container__backgroundfilm1"></div>
           <div class="container__text">
-            <h4>Filme I</h4>
+            <h4>Homem-Aranha</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
-              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
-              veniam fugiat maiores cumque est iure provident!
+              Peter Parker (Tobey Maguire) é um jovem estudioso que vive com
+              seus tios, Ben (Cliff Robertson) e May (Rosemary Harris), desde
+              que seus pais faleceram. Inteligente e com um grande interesse
+              pela ciência, Peter tem dificuldade em se relacionar com seus
+              colegas, por ser tímido e por eles o considerarem um nerd. Até
+              que, em uma demonstração científica, um acidente inesperado faz
+              com que aranha modificada geneticamente pique Peter. A partir de
+              então seu corpo é quimicamente alterado pela picada da aranha,
+              fazendo com que Peter possa escalar paredes e tetos, emitir pelos
+              punhos um fluido ultra-resistente semelhante à uma teia de aranha
+              e passe a ter um "sentido de aranha", que o avisa sempre que há
+              perigo por perto, além de superforça e visão ampliada.
+              Inicialmente Peter pensa em usar seus novos poderes para ganhar
+              dinheiro, adotando o nome de Homem-Aranha e se apresentando em
+              lutas de exibição. Porém, ao permitir que um ladrão fuja por não
+              considerar sua função capturá-lo, o fugitivo acaba assassinando
+              seu tio Ben. A partir de então, Peter decide não mais usar seus
+              poderes para proveito próprio e sim para enfrentar o mal, tendo
+              como seu primeiro grande desafio enfrentar o psicótico Duende
+              Verde (Willem Dafoe), que na verdade é o empresário Norman Osborn
+              após ter sido exposto à um gás experimental que lhe deu uma
+              segunda personalidade e grande força física.
             </p>
           </div>
           <div class="button__card">
@@ -48,12 +66,20 @@
           <div class="container__backgroundfilm2"></div>
           <div class="container__text">
             <div class="container__text">
-              <h4>Filme II</h4>
+              <h4>Homem-Aranha II</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Necessitatibus porro nesciunt saepe, temporibus odio distinctio
-                voluptatum ducimus esse labore, voluptatem quam aspernatur
-                numquam veniam fugiat maiores cumque est iure provident!
+                Em Homem-Aranha 2, após derrotar o Duende Verde, a vida de Peter
+                Parker (Tobey Maguire) muda por completo. Temendo que Mary Jane
+                (Kirsten Dunst) sofra algum risco por ser ele o Homem-Aranha,
+                Peter continua escondendo o amor que sente e se mantém longe
+                dela. Ao mesmo tempo precisa lidar com Harry (James Franco), seu
+                melhor amigo, cuja raiva pelo Homem-Aranha aumenta cada vez mais
+                por considerá-lo como sendo o assassino de seu pai. Além disso
+                sua tia May (Rosemary Harris) passa por uma fase difícil após a
+                morte de seu tio Ben, estranhando também o comportamento do
+                sobrinho. Enquanto precisa lidar com seus problemas particulares
+                Peter recebe ainda uma má notícia: o surgimento do Dr. Octopus
+                (Alfred Molina), um homem que possui tentáculos presos ao corpo.
               </p>
             </div>
           </div>
@@ -64,12 +90,19 @@
         <div class="cardfilm__3 slide03">
           <div class="container__backgroundfilm3"></div>
           <div class="container__text">
-            <h4>Filme III</h4>
+            <h4>Homem-Aranha III</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
-              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
-              veniam fugiat maiores cumque est iure provident!
+              Peter Parker (Tobey Maguire) conseguiu encontrar um meio-termo
+              entre seus deveres como o Homem-Aranha e seu relacionamento com
+              Mary Jane (Kirsten Dunst). Porém o sucesso como herói e a
+              bajulação dos fãs, entre eles Gwen Stacy (Bryce Dallas Howard),
+              faz com que Peter se torne auto-confiante demais e passe a
+              negligenciar as pessoas que se importam com ele. Porém a situação
+              muda quando ele precisa enfrentar Flint Marko (Thomas Haden
+              Church), mais conhecido como o Homem-Areia, que possui ligações
+              com a morte do seu tio Ben. Tendo que lidar com o sentimento de
+              vingança, Peter passa a usar um estranho uniforme negro, que se
+              adapta ao seu corpo.
             </p>
           </div>
           <div class="button__card">
@@ -96,25 +129,70 @@
           <div class="container__text">
             <h4>Filme V</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
-              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
-              veniam fugiat maiores cumque est iure provident!
+              Em O Espetacular Homem-Aranha 2, Peter Parker (Andrew Garfield)
+              adora ser o Homem-Aranha, por mais que ser o herói aracnídeo o
+              coloque em situações bem complicadas, especialmente com sua
+              namorada Gwen Stacy (Emma Stone) e sua tia May (Sally Field).
+              Apesar disto, ele equilibra suas várias facetas da forma que pode.
+              No momento, Peter está mais preocupado é com o fantasma da
+              promessa feita ao pai de Gwen, de que se afastaria dela para
+              protegê-la. Ao mesmo tempo ele precisa lidar com o retorno de um
+              velho amigo, Harry Osborn (Dane DeHaan), e o surgimento de um
+              vilão poderoso: Electro (Jamie Foxx).
             </p>
           </div>
           <div class="button__card">
             <button><a href="#"> LER MAIS</a></button>
           </div>
         </div>
+
         <div class="cardfilm__6 slide06">
           <div class="container__backgroundfilm6"></div>
           <div class="container__text">
             <h4>Filme VI</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus porro nesciunt saepe, temporibus odio distinctio
-              voluptatum ducimus esse labore, voluptatem quam aspernatur numquam
-              veniam fugiat maiores cumque est iure provident!
+              Em Homem-Aranha: De Volta ao Lar, depois de atuar ao lado dos
+              Vingadores, chegou a hora de Peter Parker (Tom Holland) voltar
+              para casa e para a sua vida, já não mais tão normal. Lutando
+              diariamente contra pequenos crimes nas redondezas, ele pensa ter
+              encontrado a missão de sua vida quando o terrível vilão Abutre
+              (Michael Keaton) surge amedrontando a cidade. O problema é que a
+              tarefa não será tão fácil como ele imaginava.
+            </p>
+          </div>
+          <div class="button__card">
+            <button><a href="#"> LER MAIS</a></button>
+          </div>
+        </div>
+
+        <div class="cardfilm__7 slide07">
+          <div class="container__backgroundfilm7"></div>
+          <div class="container__text">
+            <h4>Filme VII</h4>
+            <p>
+              Enquanto tenta superar a dor de perder Tony Stark, Peter Parker é
+              recrutado por Nick Fury para lutar contra nova ameaça ao lado de
+              Mysterio.
+            </p>
+          </div>
+          <div class="button__card">
+            <button><a href="#"> LER MAIS</a></button>
+          </div>
+        </div>
+
+        <div class="cardfilm__8 slide08">
+          <div class="container__backgroundfilm8"></div>
+          <div class="container__text">
+            <h4>Filme VIII</h4>
+            <p>
+              Após os acontecimentos de Homem-Aranha: Longe de Casa, o mundo
+              acaba sabendo a real identidade do Homem-Aranha, além de acharem
+              que foi ele quem matou Mysterio. Peter acaba pedindo ajuda para o
+              Doutor Estranho para que ele apague essa informação de sua
+              identidade secreta do mundo, mas o feitiço da errado e
+              estranhamente, vilões de outras versões do Homem-Aranha de outros
+              universos acabam indo para seu mundo, dificultando a vida de
+              Peter.
             </p>
           </div>
           <div class="button__card">
@@ -124,40 +202,44 @@
       </div>
     </section>
     <footer id="about__us">
-        <div class="dev__group">
-          <div class="student__01">
-            <p class="name__student">André Castro</p>
-            <p>Responsável pelo desenvolvimento de</p>
-            <div class="links">
-              <a href="https://github.com/AndreCastro06" target="_blank"
-                ><img src="/img/Github__logo.png"
-              /></a>
-              <a
-                href="https://www.linkedin.com/in/andr%C3%A9-castro-45932011a/"
-                target="_blank"
-                ><img src="/img/Linkedin__logo.png"
-              /></a>
-            </div>
-          </div>
-          <div class="student__02">
-            <p class="name__student">Felipe Estevão</p>
-            <p>Responsável pelo desenvolvimento de</p>
-            <div class="links">
-              <a href="" target="_blank"><img src="/img/Github__logo.png" /></a>
-              <a href="" target="_blank"><img src="/img/Linkedin__logo.png" /></a>
-            </div>
-          </div>
-          <div class="student__03">
-            <p class="name__student">Gustavo Lourenço</p>
-            <p>Responsável pelo desenvolvimento de</p>
-            <div class="links">
-              <a href="" target="_blank"><img src="/img/Github__logo.png" /></a>
-              <a href="" target="_blank"><img src="/img/Linkedin__logo.png" /></a>
-            </div>
+      <div class="dev__group">
+        <div class="student__01">
+          <p class="name__student">André Castro</p>
+          <p>Responsável pelo desenvolvimento de</p>
+          <div class="links">
+            <a href="https://github.com/AndreCastro06" target="_blank"
+              ><img src="/img/Github__logo.png"
+            /></a>
+            <a
+              href="https://www.linkedin.com/in/andr%C3%A9-castro-45932011a/"
+              target="_blank"
+              ><img src="/img/Linkedin__logo.png"
+            /></a>
           </div>
         </div>
-        <div class="data__dev"><p>CHECKPOINT II DESENVOLVIDO JUNHO - MMXXII</p>
-        <a href="#home__menu"><img class="head__spider" src="/img/footer__headspider-remove.png"></a></div>
-      </footer>
+        <div class="student__02">
+          <p class="name__student">Felipe Estevão</p>
+          <p>Responsável pelo desenvolvimento de</p>
+          <div class="links">
+            <a href="" target="_blank"><img src="/img/Github__logo.png" /></a>
+            <a href="" target="_blank"><img src="/img/Linkedin__logo.png" /></a>
+          </div>
+        </div>
+        <div class="student__03">
+          <p class="name__student">Gustavo Lourenço</p>
+          <p>Responsável pelo desenvolvimento de</p>
+          <div class="links">
+            <a href="" target="_blank"><img src="/img/Github__logo.png" /></a>
+            <a href="" target="_blank"><img src="/img/Linkedin__logo.png" /></a>
+          </div>
+        </div>
+      </div>
+      <div class="data__dev">
+        <p>CHECKPOINT II DESENVOLVIDO JUNHO - MMXXII</p>
+        <a href="#home__menu"
+          ><img class="head__spider" src="/img/footer__headspider-remove.png"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
